deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: musicmaster-service
spec:
  selector:
    app: musicmaster
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
